--- a/assets/sccs/styles.scss
+++ b/assets/sccs/styles.scss
@@ -11,10 +11,12 @@
 // Includes
 @import "general";
 @import "components/navigation";
+@import "components/navigation-style";
 @import "components/header";
 @import "components/footer";
 @import "components/haendlerFilterDropdown";
 @import "components/modul_haendlerFilter";
+@import "components/pagination-haendler";
 
 
 @import "components/formular";
