--- a/templates/_ajax-feedback/haendler.twig
+++ b/templates/_ajax-feedback/haendler.twig
@@ -3,24 +3,22 @@
 {#
 template        => Dieses Template wird über get-ajax-feedback.twig aufgerufen diese benötigt den Namen dieses templates
 blockid         => wird das matrixElemente der "Content Page" in der Schleife ausgelesen ist dies die Block ID wo das Modul aufgerufen wird (benötigt in get-ajax-feedback.twig )
-catstatus       => Param: 1 oder 0 / gibt Auskunft ob über das Suchergebnis Land mit einer Kategorie verknüpft ist, oder nicht
 produktgruppe   => IDs Produktgruppe-Kategorie
 land            => IDs Land-Kategorie
 sectionname     => sectionname der "Content Page" Seite welches über das entprechende Modul, das Ajax Event ausgelöst
 pageid          => ID der "Content Page" Seite welches über das entprechende Modul, das Ajax Event ausgelöst
-getall          => Diesen Template ist zugewiesen, ob alle Ergebnisse angezeigt werden oder in Etappen nachgeladen wird. Mit "getall" kann dieses geändert werden.
-artikelausgabe  => Gesamtzahl der Augegebenen Artikel (ohne "weitere Ergebnisse anzeigen" obwohl es weitere gibt)
 #}
 
-{% set catstatus = (catstatus != 1)? 0 : 1 %}
 
 {# ************************************************* #}
 {# *------------* START Konfiguration *------------ *#}
 {# ************************************************* #}
 {% set lg = 'en' %}
 {# *-----------------------------------------*#}
+
 {% set myUrl = url(craft.app.request.pathInfo) %}
-{% set param = '?template=haendler&blockid=' ~ blockid ~ '&output=' ~ output ~ '&sectionname=' ~ sectionnamepage ~ '&pageid=' ~ pageid %}
+{% set param = '?' ~ craft.app.request.getQueryStringWithoutPath()%}
+
 {# *-----------------------------------------*#}
 {% set sectionName = 'haendler' %}
 {# *-----------------------------------------*#}
@@ -28,16 +26,12 @@ artikelausgabe  => Gesamtzahl der Augegebenen Artikel (ohne "weitere Ergebnisse 
 {# *-----------------------------------------*#}
 {% set showMore = false %}
 {# *-----------------------------------------*#}
-{% set imgQuality = 85 %}
-{# *-----------------------------------------*#}
-{% set imgFormat = adminConfig.imageFormat %}
-{# *-----------------------------------------*#}
-
 {% set resultPager = block.pager|number %}
+
 {% if resultPager == 0 %}
     {% set pageSizeArtikel = 10000 %}
 {% else %}
-    {% set pageSizeArtikel = block.anzahlArtikel|number %}
+    {% set pageSizeArtikel = block.anzahlArtikel.value|number %}
 {% endif %}
 
 {# *-----------------------------------------*#}
@@ -47,16 +41,14 @@ artikelausgabe  => Gesamtzahl der Augegebenen Artikel (ohne "weitere Ergebnisse 
 {# *-----------------------------------------*#}
  {% set ausgabeLand = '' %}
 {# *-----------------------------------------*#}
-
 {% set pageIdsLand = {} %}
 {% set counterPageIdsLand = 0 %}
 {# *-----------------------------------------*#}
-
+{% set showAll = (land == '')? true : false %}
+{# *-----------------------------------------*#}
 
 {# *----------------* Land *---------------- #}
 {% set categoryLandIdsAnzahl = 0 %}
-
-{% set showAll = (land == '')? true : false %}
 
 
 {% if land != '' %}
@@ -70,11 +62,13 @@ artikelausgabe  => Gesamtzahl der Augegebenen Artikel (ohne "weitere Ergebnisse 
         .section(sectionName)
         .relatedTo(['and',categoryLandBy])
         .limit(pageSizeArtikel) %}
+
 {% endif %}
 
 {# *-------------* Produktgruppe *------------- #}
 {% set categoryProduktgruppeIdsAnzahl = 0 %}
 {% if produktgruppe != '' %}
+
     {% set categoryProduktgruppeIdsArray = produktgruppe|split(',') %}
     {% set categoryProduktgruppeIdsAnzahl = categoryProduktgruppeIdsArray|length %}
     {% set categoryProduktgruppeSelectById = craft.categories().id(categoryProduktgruppeIdsArray).all() %}
@@ -84,9 +78,8 @@ artikelausgabe  => Gesamtzahl der Augegebenen Artikel (ohne "weitere Ergebnisse 
         .section(sectionName)
         .relatedTo(['and',categoryProduktgruppeBy])
         .limit(pageSizeArtikel) %}
+
 {% endif %}
-
-
 
 {# * ============================================================ * #}
 {# * ============================================================ * #}
@@ -114,10 +107,7 @@ artikelausgabe  => Gesamtzahl der Augegebenen Artikel (ohne "weitere Ergebnisse 
 
 {% endif %}
 
-
-{% if catstatus == 0 %}
-
-    {# ********************************************************************************** #}
+{# * ******************************************************************************************************* *#}
 
     {% if land != '' %}
 
@@ -143,117 +133,88 @@ artikelausgabe  => Gesamtzahl der Augegebenen Artikel (ohne "weitere Ergebnisse 
 
     {% endif %}
 
-    {# ********************************************************************************** #}
+{# * ******************************************************************************************************* *#}
 
     {% set anzahlArtikel = articleItems.count()  %}
     {% if anzahlArtikel > 4 and anzahlArtikel > pageSizeArtikel %}
         {% set showMore = true %}
+        {% paginate articleItems as pageInfo, entries %}
     {% else %}
         {% set showMore = false %}
     {% endif %}
 
     {# *-----------------------------------------* #}
 
-    {% paginate articleItems as pageInfo, entries %}
-
     {% if showMore == false %}
         {% set entries = articleItems %}
     {% endif %}
 
-    {# ********************************************************************************** #}
-
-
-{% else %}
-
-    {# ********************************************************************************** #}
-
-
-    {% set articleItems = craft.entries()
-        .section(sectionName)
-        .limit(pageSizeArtikel) %}
-
-    {% if categoryProduktgruppeIdsAnzahl > 0 %}
-
-        {% set pageIdsLand = {} %}
-
-        {% for item in articleItems %}
-
-            {% set produktgruppeExist = false %}
-            {% for catFachbereichResult in item.auswahlKategorieProduktgruppe.all() %}
-                {% if produktgruppe == catFachbereichResult.id  %}
-                    {% set produktgruppeExist = true %}
-                {% endif %}
-            {% endfor %}
-
-            {% if produktgruppeExist %}
-                {% for catLandResult in item.auswahlKategorieLand.all() %}
-                    {% if land == catLandResult.id  %}
-                        {% set pageIdsLand = pageIdsLand|merge({ (counterPageIdsLand) : item.id }) %}
-                        {% set counterPageIdsLand = counterPageIdsLand + 1 %}
-                    {% endif %}
-                {% endfor %}
-            {% endif %}
-
-        {% endfor %}
-
-    {% else %}
-
-        {% set pageIdsLand = {} %}
-        {% for item in articleItems %}
-
-            {% for catLandResult in item.auswahlKategorieLand.all() %}
-                {% if land == catLandResult.id  %}
-                    {% set pageIdsLand = pageIdsLand|merge({ (counterPageIdsLand) : item.id }) %}
-                    {% set counterPageIdsLand = counterPageIdsLand + 1 %}
-                {% endif %}
-            {% endfor %}
-
-        {% endfor %}
-
-    {% endif %}
-
-    {% set hasCategory = ( pageIdsLand|length > 0 )? '1' : '0' %}
-
-    {# ********************************************************************************** #}
-
-{% endif %}
-
-
-{# * ******************************************************************************************************* *#}
-
- {% if catstatus == 0 %}
 
      {% set counter = '1' %}
      {% if entries|length > 0 %}
+
+
 
          <div class="article-container">
          {% for entry in entries %}
 
 
+             {# * ******************************************************************************************************* *#}
+             {% set haendlerWebUrlText = '' %}
+             {# * ******************************************************************************************************* *#}
 
-        {#
-             {% if showAll %}     AAA
-                 {% set standorteStr = '' %}
-                 {% for catStandortResult in entry.auswahlKategorieLand.all() %}
-                     {% set standorteStr  = standorteStr  ~ ', ' ~ catStandortResult %}
-                 {% endfor %}
-                 {% set ausgabeStandort = standorteStr|trim(',') %}
-             {% else %}  BBB
-                 {% for catStandortResult in entry.zuweisungKategorieStandorte.all() %}
-                     {% if catStandortResult.id  == standort %}
-                         {% set ausgabeStandort = catStandortResult %}
-                     {% endif %}
-                 {% endfor %}
+             {% set haendlerWebUrl = entry.haendlerWebUrl %}
+             {% set haendlerMail = entry.haendlerMail %}
+             {% set haendlerMailData = '' %}
+
+             {% if haendlerWebUrl != '' and '//' in haendlerWebUrl %}
+                 {% set haendlerWebUrlArray = haendlerWebUrl|split('//') %}
+                 {% set haendlerWebUrlText = haendlerWebUrlArray[1] %}
              {% endif %}
-        #}
+
+             {% if haendlerMail != '' %}
+                 {% set haendlerMailData = haendlerMail|replace({'@': '[at]'})%}
+                 {% set haendlerMailData = haendlerMailData|replace({'.': '[dot]'})%}
+             {% endif %}
+
              <article class="haendler-item">
                  <div class="artikelContent">
                      {{ currentSite.handle }}
                      <br />=================<br />
-                     {{ entry.title }}
+
+                     {{ entry.firmenName }}
                      <br />=================<br />
 
-                     {{ entry.teaserText }}
+                     {{ entry.haendlerName }}
+                     <br />=================<br />
+
+                     <div class="artikelContentAdresse" style="background-color: #b7e591; display: block">
+                     {{ entry.haendlerAdresse|nl2br }}
+                     </div>
+
+                     <br />=================<br />
+
+                     {% if entry.haendlerTelefonnummer is not empty %}
+                        {{ craft.wul.phone(entry.haendlerTelefonnummer,'phone',entry.haendlerTelefonnummer)|raw }}
+                     {% endif %}
+
+                     <br />=================<br />
+
+                     {% if haendlerMail != '' %}
+                     <div class="artikelContentMail" style="background-color: pink">
+                         <a data-email="{{ haendlerMailData }}">E-Mail schreiben</a>
+                     {% endif %}
+
+
+
+                     <br />=================<br />
+
+                     <div class="artikelContentWebUrl" style="background-color: pink">
+                         {% if haendlerWebUrl != '' and '//' in haendlerWebUrl %}
+                         Web: <a href="{{ haendlerWebUrl }}" target="_blank">{{ haendlerWebUrlText }}</a>
+                         {% endif %}
+                     </div>
+
                  </div>
              </article>
 
@@ -263,34 +224,35 @@ artikelausgabe  => Gesamtzahl der Augegebenen Artikel (ohne "weitere Ergebnisse 
 
      {% else %}
 
-         {% if catstatus == 0 %}
-             Es ist keine Ergebnise zu diesem Standort vorhanden!
-         {% else %}
-             {% set hasCategory = '0' %}
-         {% endif %}
+        Es ist keine Ergebnise vorhanden!
 
      {% endif %}
 
- {% endif %}
- {% if catstatus == 1 %}{{ hasCategory }}{% endif %}
-
 
 {% if showMore %}
-    <div class="blog-pagination-container">
+    <div class="pagination-container">
 
-        <div class="blog-pagination">
+        <div class="pagination">
 
-            <div class="blog-pagination-arrow-left">
-                <a class="btnPager links {% if not pageInfo.prevUrl %} disabled{% endif %}"{% if pageInfo.prevUrl %} data-more="{{ pageInfo.prevUrl }}#articles"{% endif %}>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="19.014" height="19.014" viewBox="0 0 19.014 19.014">
-                        <path id="arrow_forward_FILL0_wght400_GRAD0_opsz48" d="M17.507,27.014l1.248-1.277L11.417,18.4h15.6V16.616h-15.6l7.338-7.338L17.507,8,8,17.507Z" transform="translate(-8 -8)" fill="#000"/>
-                    </svg>
-                </a>
+            <div class="pagination-arrow-left">
+                {% if not pageInfo.prevUrl %}
+                    <span class="links disabled">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="19.014" height="19.014" viewBox="0 0 19.014 19.014">
+                            <path id="arrow_forward_FILL0_wght400_GRAD0_opsz48" d="M17.507,27.014l1.248-1.277L11.417,18.4h15.6V16.616h-15.6l7.338-7.338L17.507,8,8,17.507Z" transform="translate(-8 -8)" fill="#000"/>
+                        </svg>
+                    </span>
+                {% else %}
+                    <a class="btnPager links"{% if pageInfo.prevUrl %} data-more="{{ pageInfo.prevUrl }}"{% endif %}>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="19.014" height="19.014" viewBox="0 0 19.014 19.014">
+                            <path id="arrow_forward_FILL0_wght400_GRAD0_opsz48" d="M17.507,27.014l1.248-1.277L11.417,18.4h15.6V16.616h-15.6l7.338-7.338L17.507,8,8,17.507Z" transform="translate(-8 -8)" fill="#000"/>
+                        </svg>
+                    </a>
+                {% endif %}
             </div>
 
 
-            <div class="blog-pagination-arrow-counter">
-                <div class="blog-pagination-arrow-counter-inner">
+            <div class="pagination-arrow-counter">
+                <div class="pagination-arrow-counter-inner">
                     {% for i in range(1,pageInfo.totalPages) %}
                         <a class="btnPager {% if pageInfo.currentPage == loop.index %} active{% endif %}" data-more="{{ myUrl }}/p{{loop.index}}{{ param }}">{{loop.index}}</a>
                     {% endfor %}
@@ -298,20 +260,26 @@ artikelausgabe  => Gesamtzahl der Augegebenen Artikel (ohne "weitere Ergebnisse 
             </div>
 
 
-            <div class="blog-pagination-arrow-right">
-                <a class="btnPager rechts {% if not pageInfo.nextUrl %} disabled{% endif %}"{% if pageInfo.nextUrl %} data-more="{{ pageInfo.nextUrl }}#articles"{% endif %}>
+            <div class="pagination-arrow-right">
+                {% if not pageInfo.nextUrl %}
+                    <span class="rechts disabled">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="19.014" height="19.014" viewBox="0 0 19.014 19.014">
+                            <path id="arrow_forward_FILL0_wght400_GRAD0_opsz48" d="M17.507,27.014l-1.248-1.277L23.6,18.4H8V16.616H23.6L16.259,9.277,17.507,8l9.507,9.507Z" transform="translate(-8 -8)" fill="#000"/>
+                        </svg>
+                    </span>
+            {% else %}
+                <a class="btnPager rechts"{% if pageInfo.nextUrl %} data-more="{{ pageInfo.nextUrl }}"{% endif %}>
                     <svg xmlns="http://www.w3.org/2000/svg" width="19.014" height="19.014" viewBox="0 0 19.014 19.014">
                         <path id="arrow_forward_FILL0_wght400_GRAD0_opsz48" d="M17.507,27.014l-1.248-1.277L23.6,18.4H8V16.616H23.6L16.259,9.277,17.507,8l9.507,9.507Z" transform="translate(-8 -8)" fill="#000"/>
                     </svg>
                 </a>
+            {% endif %}
             </div>
-
 
         </div>
 
     </div>
 {% endif %}
-
 
 
 
