--- a/templates/_include-core/navigation.twig
+++ b/templates/_include-core/navigation.twig
@@ -20,57 +20,113 @@
         {% set showHrefFirstLevel = false %}
     {% endif %}
 
-    <nav class="mobile-menu layoutDektop">
-
-        <div class="nav-inner wl-wrapper">
-
-            <div class="nav-inner-right">
-                <ul id="nav" class="responsive-menu" data-menu-style="accordion">
-                    {% nav page in pages %}
-                        {% set outputUrl = page.getUrl() %}
-                        {% set outputTitle = page.title %}
-                        {% set setActiveClass = "" %}
-                        {% set setActiveClassMain = "" %}
-                        {% set parentEntry = page.getParent(entry) %}
-
-                        {% set pageUrlSegs = (page.url|split('//'))[1]|split('/') %}
-                        {% if craft.app.request.segments|last == pageUrlSegs|last %}
-                            {% set setActiveClass = " active" %}
-                        {% endif %}
-
-                        {% if page.id == firstLevelActiveID %}
-                            {% set setActiveClass = " active" %}
-                            {% set setActiveClassMain = ' active-level1' %}
-                        {% endif %}
-
-                        {% if page.level == 1 and page.children.excludeNavigation(0)|length and showHrefFirstLevel == false %}
-                            {% set output = '<a data-level="' ~ page.level ~ '" class="level-' ~ page.level ~' navi' ~ setActiveClass ~'"><span>' ~ outputTitle ~ '</span></a>' %}
-                        {% elseif page.level == 1 and page.children.excludeNavigation(0)|length and showHrefFirstLevel == true %}
-                            {% set output = '<a data-level="' ~ page.level ~ '" class="level-' ~ page.level ~' navi' ~ setActiveClass ~'" href="' ~ outputUrl ~ '"><span>' ~ outputTitle ~ '</span></a>' %}
-                        {% else %}
-                            {% set output = '<a data-level="' ~ page.level ~ '" class="level-' ~ page.level ~' navi' ~ setActiveClass ~'" href="' ~ outputUrl ~ '"><span>' ~ outputTitle ~ '</span></a>' %}
-                        {% endif %}
-
-                        {% set redirect = page.redirect %}
-                        {% if redirect is defined and redirect is not null %}
-                            {% set redirectLink = redirect.getUrl() %}
-                            {% if redirectLink is not null %}
-                                {% if redirect.getTarget() == '_blank' %}
-                                    {% set output = '<a class="navi" href="' ~ outputUrl ~ '" target="_blank"><span>' ~ outputTitle ~ '</span></a>' %}
-                                {% else %}
-                                    {% set output = '<a class="navi" href="' ~ redirectLink ~ '"><span>' ~ outputTitle ~ '</span></a>' %}
-                                {% endif %}
-                            {% endif %}
-                        {% endif %}
-
-                        <li class="level-{{ page.level }} {{ setActiveClassMain }} {{ setActiveClass }}">{{ output|raw}}{% ifchildren %}
-
-                                <ul class="child">{% children %}
-                                </ul>{% endifchildren %}</li>
-                    {% endnav %}</ul>
-            </div>
-
+    <div class="menu-close">
+        <div class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
+    </div>
+
+    <nav id="wl-nav" class="wl-navi-overlay-content">
+
+        {% nav page in pages %}
+
+            {% set outputTitle = page.title %}
+            {% set outputId = page.id %}
+            {% set setActiveClass = "" %}
+            {% set setActiveClassMain = "" %}
+            {% set parentEntry = page.getParent(entry) %}
+            {% set setIconeClass = "" %}
+            {% set domain = craft.app.sites.primarySite.baseUrl %}
+            {% set outputUrl = page.getUrl() %}
+
+            {% set pageUrlSegs = (page.url|split('//'))[1]|split('/') %}
+            {% if craft.app.request.segments|last == pageUrlSegs|last %}
+                {% set setActiveClass = " active" %}
+            {% endif %}
+
+            {% if page.id == 4644 %}
+                {#  {% set setIconeClass = " icon" %} #}
+                {% set setIconeClass = "" %}
+            {% endif %}
+
+            {% if page.id == firstLevelActiveID %}
+                {% set setActiveClass = " active" %}
+                {% set setActiveClassMain = ' active-level1' %}
+            {% endif %}
+
+            {% if page.level == 1 and page.children.excludeNavigation(0)|length and showHrefFirstLevel == false %}
+                {% set output = '<a data-level="' ~ page.level ~ '" class="level-' ~ page.level ~' navi' ~ setActiveClass ~ setIconeClass ~ '"><span>' ~ outputTitle ~ '</span></a>' %}
+            {% elseif page.level == 1 and page.children.excludeNavigation(0)|length and showHrefFirstLevel == true %}
+                {% set output = '<a data-level="' ~ page.level ~ '" class="level-' ~ page.level ~' navi' ~ setActiveClass ~ setIconeClass ~ '" href="' ~ outputUrl ~ '">' ~ outputTitle ~ '</a>' %}
+            {% else %}
+                {% set output = '<a data-level="' ~ page.level ~ '" class="level-' ~ page.level ~' navi' ~ setActiveClass ~ setIconeClass ~ '" href="' ~ outputUrl ~ '">' ~ outputTitle ~ '</a>' %}
+            {% endif %}
+
+            {% set redirect = page.redirect %}
+            {% if redirect is defined and redirect is not null %}
+                {% set redirectLink = redirect.getUrl() %}
+                {% if redirectLink is not null %}
+                    {% if redirect.getTarget() == '_blank' %}
+                        {% set output = '<a class="navi" href="' ~ outputUrl ~ '" target="_blank"><span>' ~ outputTitle ~ '</span></a>' %}
+                    {% else %}
+                        {% set output = '<a class="navi" href="' ~ redirectLink ~ '"><span>' ~ outputTitle ~ '</span></a>' %}
+                    {% endif %}
+                {% endif %}
+            {% endif %}
+
+            {{ output|raw}}
+
+        {% endnav %}
+
+        <div class="animation{% if  entry.id != 2 %} active{% endif %}"></div>
+
+
+        {# Ausgabe Button #}
+        <div class="buttonNavigation buttonNavigationMobile">
+
+            Händler finden
+
+            {% set showBtnNavigation = buttonNavigation.buttonNavigation.one()|default(false) %}
+            {% if showBtnNavigation %}
+                {% for item in buttonNavigation.buttonNavigation.all() %}
+                    {% set className = (item.layout.value != '')? item.layout.value : 'navBtnLayout1' %}
+                    {% set element = item.auswahlSeite %}
+                    {% set type = element.type %}
+                    {% set linkText = '' %}
+
+
+                    {% set showElementEntry = (element.getUrl() == '')? false : true %}
+                    {% if showElementEntry %}
+
+                        {% if  type == 'entry' %}
+
+                            {% if element.getCustomText() == '' %}
+                                {% set linkText = element.text|trim %}
+                                {% set linkText = linkText|replace({ ' ' : '<br />' }) %}
+                                {{ element.title() }} <a class="{{ className }}" href="{{element.getUrl()}}"{% if element.getTarget() == '_blank' %} target="_blank" {% endif %}>{{ linkText|raw }}</a>
+                            {% else %}
+                                {% set linkText = element.getCustomText()|trim %}
+                                {% set linkText = linkText|replace({ ' ' : '<br />' }) %}
+                                {{ element.title() }} <a class="{{ className }}" href="{{element.getUrl()}}"{% if element.getTarget() == '_blank' %} target="_blank" {% endif %}>{{ linkText|raw }}</a>
+                            {% endif %}
+
+                        {% elseif  type == 'url' %}
+                            {% set linkText = element.getCustomText()|trim %}
+                            {% set linkText = linkText|replace({ ' ' : '<br />' }) %}
+                            {{ element.title() }} <a class="{{ className }}" href="{{element.getUrl()}}"{% if element.getTarget() == '_blank' %} target="_blank" {% endif %}>{{ linkText|raw }}</a>
+                        {% endif %}
+
+                    {% endif %}
+
+                {% endfor %}
+            {% endif %}
+            <a style="width: 100%; height: 80px;" data-abstand ></a>
+        </div>
+
     </nav>
+
+
 
 </div>
